--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
-        "laravel/tinker": "^2.10.1",
-        "silviolleite/laravelpwa": "^2.0"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
